tests/language/syntax/errors/missing-closing-paren.zena
// @target: statement
if (true { } // @error: Expected '\)'
